--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ cffi==1.14.6
 charset-normalizer==2.0.6
 cryptography==35.0.0
 Deprecated==1.2.13
+dnspython==2.1.0
+email-validator==1.1.3
 firebase==3.0.1
 gcloud==0.18.3
 googleapis-common-protos==1.53.0
