--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "python.pythonPath": "/home/cpneppal/Documents/myenv/bin/python"
+  "python.pythonPath": "/home/cpneppal/442env/bin/python3.8"
 }
