--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 __pycache__
 .vscode
+#ignore the decrypted server configuration files
+server_configuration_files/config-decrypted.json
+server_configuration_files/service-decrypted.json
+# ignore the firebase npm
+node_modules
+package-lock.json
+package.json
